[project]
name = "ting13"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "botasaurus>=4.0.74",
    "chrome-extension-python>=1.0.1",
    "image-in-terminal>=1.2.6",
    "pathvalidate>=3.2.1",
    "rich>=13.9.4",
    "typer>=0.12.5",
]
